Example: Make: Do not use --opt-irq
While it is entrily ok to use the flag in the example, it doesn't correspond
to the README instructions.

Signed-off-by: Patrick Pedersen <ctx.xda@gmail.com>

--- a/example/Makefile
+++ b/example/Makefile
@@ -47,7 +47,7 @@ AS_FLAGS = -plosg -ff
 
 # Dead Code Elimination
 DCE_DIR = $(BUILD_DIR)/dce
-DCE_FLAGS = --opt-irq
+DCE_FLAGS =
 
 # Object files
 OBJ_DIR = $(BUILD_DIR)/obj
