--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    environment: release
+    permissions:
+      id-token: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -22,8 +26,10 @@ jobs:
           python-version: '3.8'
 
       - name: Install build dependencies
-        run: pip install hatchling
-
+        run: |
+          python -m pip install --upgrade pip 
+          pip install hatch
+          
       - name: Build the package
         run: hatch build
 
